update software list
Signed-off-by: FUJITA Tomonori <fujita.tomonori@lab.ntt.co.jp>

--- a/index.html
+++ b/index.html
@@ -40,13 +40,31 @@ systems, and storage systems. You can find me in group pictures of Linux Kernel 
 
 <li>
 <p>
-I've been working on <a href="http://stgt.sf.net/">the target infrastructure</a> in Linux SCSI subsystem with <a href="http://www.kernel.org/pub/linux/kernel/people/mnc/">Mike Christie</a>. It's known as <a href="http://rhn.redhat.com/errata/RHEA-2009-0099.html">scsi-target-utils package</a>.
+I founded and have maintained <a href="https://osrg.github.io/gobgp/">the GoBGP project</a>, a BGP implementation in the Go Programming Language.
 </p>
 </li>
 
 <li>
 <p>
-I've been working on <a href="http://www.osrg.net/sheepdog/">Sheepdog project</a>, a distributed storage system for <a href="http://www.linux-kvm.org/">KVM</a>.
+I founded and have maintained <a href="https://osrg.github.io/ryu/">the Ryu SDN Framework project</a>, Python libraries for networking.
+</p>
+</li>
+
+<li>
+<p>
+I founded and had maintained <a href="https://github.com/openstack/swift3">the Swift3 project</a>, adding the Amazon S3 API support to <a href="https://github.com/openstack/swift">OpenStack Swift</a>.
+</p>
+</li>
+
+<li>
+<p>
+I founded and have maintained <a href="http://stgt.sf.net/">the target infrastructure</a> in Linux SCSI subsystem with <a href="http://www.kernel.org/pub/linux/kernel/people/mnc/">Mike Christie</a>. It's known as <a href="https://www.rpmfind.net/linux/rpm2html/search.php?query=scsi-target-utils">scsi-target-utils</a> or <a href="https://launchpad.net/ubuntu/+source/tgt">tgt</a>.
+</p>
+</li>
+
+<li>
+<p>
+I started <a href="https://sheepdog.github.io/sheepdog/">Sheepdog project</a>, a distributed storage system for <a href="http://www.linux-kvm.org/">KVM</a> with <a href="https://github.com/kazum">MORITA Kazutaka</a> and had worked until the first public release.
 </p>
 </li>
 
@@ -59,80 +77,10 @@ I founded and had maintained <a href="http://iscsitarget.sourceforge.net/">iSCSI
 </ul>
 </div>
 
-
-<div>
-<h2>Papers, slides, etc</h2>
-
-<ul>
-
-<li>
-<p>
-I talked about the device mapper snapshot feature at <a href="http://sysadmin.miniconf.org/programme09.html">Systems Administration Miniconf</a> of <a href="http://lca2009.linux.org.au/">linux.conf.au 2009</a>. 
-</p>
-</li>
-
-<li>
-<p>
-If you are cool enough to know what an IOMMU is, you might enjoy <a href="http://iou.parisc-linux.org/lsf2008/IO-DMA_Representations-fujita_tomonori.pdf">DMA representations</a> slides at <a href="http://www.usenix.org/events/lsf08/tech/tech.html">2008 Linux Storage &amp; Filesystem Workshop</a>.
-</p>
-</li>
-
-<li>
-<p>
-At <a href="http://www.linux-foundation.jp/content/japan-linux-symposium">the 6th Linux Foundation Japan Symposium</a>, I talked about <a href="http://www.linux-foundation.jp/jp_uploads/seminar20071101/lfjs-fujita.pdf">the recent SCSI changes</a> that I'm interested in.
-</p>
-</li>
-
-<li>
-<p>
-<a href="./slides/lsf07-slides.odp">Unifying the block-layer API's</a> talk at <a href="http://www.usenix.org/events/lsf07/tech/tech.html">2007 Linux Storage &amp; Filesystem Workshop</a> includes things that I care about in Linux SCSI subsystem.
-</p>
-</li>
-
-<li>
-<p>
-I'm obsessed with I/O subsystems even in virtualization environments, <a href="http://www.xensource.com/files/summit_3/xen-scsi-slides.pdf">Xen scsifront/back drivers</a> at <a href="http://www.xensource.com/xen/xensummit.html">Xen Summit Fall 2006</a>.
-</p>
-</li>
-
-<li>
-<p>
-<a href="./papers/ols2006.pdf">tgt paper</a> (and <a href="./slides/ols2006-slides.odp">slides</a>) appeared at <a href="http://www.linuxsymposium.org/2006/view_abstract.php?content_key=19">Ottawa Linux Symposium 2006</a>.
-</p>
-</li>
-
-<li>
-<p>
-At <a href="http://www.linuxsymposium.org/2005/">Ottawa Linux Symposium 2005</a>, I talked about <a href="./slides/ols2005-slide.pdf">the current state of iSCSI implementations</a> in Linux.
-</p>
-</li>
-
-<li>
-<p>
-My <a href="./papers/snapi2004.pdf">paper</a> and <a href="./slides/snapi2004-slide.pdf">slides</a> about open-sourced iSCSI target implementations appeared at <a href="http://www.eece.maine.edu/snapi/snapi04/">SNAPI 04</a>, of which I was member of the program committee. You can find the longer <a href="http://fw8.bookpark.ne.jp/cm/ipsj/search.asp?flag=6&amp;keyword=IPSJ-TACS4603005&amp;mode=">Japanese journal version</a>.
-</p>
-</li>
-
-<li>
-<p>
-My <a href="http://www.ele.uri.edu/tcca/advancprogram.html">paper</a> and <a href="./slides/snapi2003-slide.pdf">slides</a> about iSCSI initiator performance issues might interest you.
-</p>
-</li>
-
-<li>
-<p>
-I implemented a file system that can guarantee data integrity on untrusted storage systems by using cryptographic hash tree (<a href="http://www.informatik.uni-trier.de/~ley/db/indices/a-tree/t/Tomonori:Fujita.html">conference</a> and <a href="http://www.jstage.jst.go.jp/article/ipsjdc/1/0/1_381/_article">journal papers</a>).
-</p>
-</li>
-
-</ul>
-</div>
-
-
 <hr>
 
 <div>
-Please send corrections, comments, and suggestions to <strong>tomof at acm.org</strong>.
+Please send corrections, comments, and suggestions to <strong>fujita.tomonori at gmail.com</strong>.
 <br>
 
 </div>
