not maintain ryu any more
Signed-off-by: FUJITA Tomonori <fujita.tomonori@gmail.com>

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ I founded and have maintained <a href="https://osrg.github.io/gobgp/">the GoBGP 
 
 <li>
 <p>
-I founded and have maintained <a href="https://osrg.github.io/ryu/">the Ryu SDN Framework project</a>, Python libraries for networking.
+I founded and had maintained <a href="https://osrg.github.io/ryu/">the Ryu SDN Framework project</a>, Python libraries for networking.
 </p>
 </li>
 
