--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@ systems, and storage systems. You can find me in group pictures of Linux Kernel 
 
 <li>
 <p>
+I founded and have maintained <a href="https://github.com/osrg/rustybgp">the RustyBGP project</a>, a BGP implementation in the Rust Programming Language.
+</p>
+</li>
+
+<p>
 I founded and have maintained <a href="https://osrg.github.io/gobgp/">the GoBGP project</a>, a BGP implementation in the Go Programming Language.
 </p>
 </li>
