--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ I founded and had maintained <a href="https://github.com/openstack/swift3">the S
 
 <li>
 <p>
-I founded and have maintained <a href="http://stgt.sf.net/">the target infrastructure</a> in Linux SCSI subsystem with <a href="http://www.kernel.org/pub/linux/kernel/people/mnc/">Mike Christie</a>. It's known as <a href="https://www.rpmfind.net/linux/rpm2html/search.php?query=scsi-target-utils">scsi-target-utils</a> or <a href="https://launchpad.net/ubuntu/+source/tgt">tgt</a>.
+I founded and have maintained <a href="https://github.com/fujita/tgt">the target infrastructure</a> in Linux SCSI subsystem with <a href="http://www.kernel.org/pub/linux/kernel/people/mnc/">Mike Christie</a>. It's known as <a href="https://www.rpmfind.net/linux/rpm2html/search.php?query=scsi-target-utils">scsi-target-utils</a> or <a href="https://launchpad.net/ubuntu/+source/tgt">tgt</a>.
 </p>
 </li>
 
